--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,22 @@
+absl-py==0.9.0
+astor==0.8.1
 attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.0
+cachetools==4.1.0
+certifi==2020.4.5.1
+chardet==3.0.4
 cycler==0.10.0
 decorator==4.4.1
 defusedxml==0.6.0
 entrypoints==0.3
+gast==0.2.2
+google-auth==1.14.0
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grpcio==1.28.1
+h5py==2.10.0
+idna==2.9
 importlib-metadata==1.3.0
 ipykernel==5.1.3
 ipython==7.11.1
@@ -18,7 +30,11 @@ jupyter==1.0.0
 jupyter-client==5.3.4
 jupyter-console==6.0.0
 jupyter-core==4.6.1
+Keras==2.3.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
 kiwisolver==1.1.0
+Markdown==3.2.1
 MarkupSafe==1.1.1
 matplotlib==3.1.2
 mistune==0.8.4
@@ -27,31 +43,48 @@ nbconvert==5.6.1
 nbformat==5.0.3
 notebook==6.0.2
 numpy==1.18.1
+oauthlib==3.1.0
+opt-einsum==3.2.1
 pandas==0.25.3
 pandocfilters==1.4.2
 parso==0.5.2
 pexpect==4.7.0
 pickleshare==0.7.5
+pkg-resources==0.0.0
 prometheus-client==0.7.1
 prompt-toolkit==2.0.10
+protobuf==3.11.3
 ptyprocess==0.6.0
 pyarrow==0.15.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 Pygments==2.5.2
 pyparsing==2.4.6
 pyrsistent==0.15.7
 python-dateutil==2.8.1
 pytz==2019.3
+PyYAML==5.3.1
 pyzmq==18.1.1
 qtconsole==4.6.0
+requests==2.23.0
+requests-oauthlib==1.3.0
+rsa==4.0
 scikit-learn==0.22.1
 scipy==1.4.1
 Send2Trash==1.5.0
 six==1.13.0
+tensorboard==2.1.1
+tensorflow==2.1.0
+tensorflow-estimator==2.1.0
+termcolor==1.1.0
 terminado==0.8.3
 testpath==0.4.4
 tornado==6.0.3
 traitlets==4.3.3
+urllib3==1.25.9
 wcwidth==0.1.8
 webencodings==0.5.1
+Werkzeug==1.0.1
 widgetsnbextension==3.5.1
+wrapt==1.12.1
 zipp==0.6.0
